Created persistent PSQL DB for mdr [DHDO-130]

--- a/.env
+++ b/.env
@@ -23,7 +23,9 @@ ENV_IRODS_REST_VERSION=4.1.10.0-RC1
 ENV_DAVRODS_IRODS_VERSION=4.2.6
 ENV_DAVRODS_VERSION=4.2.6_1.4.2
 
+# MDR
 ENV_RULE_WRAPPER_VERSION=develop
+ENV_MDR_POSTGRES_VERSION=13.4
 
 # MirthConnect
 ENV_MIRTH_CONNECT_VERSION=3.8.1.b246
