--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -367,6 +367,7 @@ services:
         - ENV_DAVRODS_IRODS_VERSION
         - ENV_DAVRODS_VERSION
         - ENV_FILEBEAT_VERSION
+        - SSL_ENV=${RIT_ENV}            # Whether to add our own CA-certificate to the CA-rootstore
     image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/davrods:${ENV_TAG}
     depends_on:
       - irods
