SSL-enabled icommands [DHS-1044, DHS-1887]

--- a/irods-icommands/Dockerfile
+++ b/irods-icommands/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 
 ARG ENV_IRODS_VERSION
 
@@ -7,6 +7,7 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
     apt-transport-https \
+    gnupg \
     wget \
     libxml2
 
@@ -25,6 +26,13 @@ RUN mkdir /home/irods/.irods
 ADD ./icommand.sh /home/irods/icommand.sh
 
 RUN chown -R irods:irods /home/irods
+
+# Trust the custom DataHub Certificate Authority (CA) for iRODS-SSL-connections
+ADD test_only_dev_irods_dh_ca_cert.pem /tmp/test_only_dev_irods_dh_ca_cert.pem
+RUN echo "Adding custom DataHub iRODS-CA-certificate to the CA-rootstore (FOR DEV & TEST ONLY!)..." \
+    && cp /tmp/test_only_dev_irods_dh_ca_cert.pem /usr/local/share/ca-certificates/test_only_dev_irods_dh_ca_cert.crt \
+    # Note that update-ca-certificates on Ubuntu wants the .crt extension (does not accept .pem)
+    && update-ca-certificates
 
 USER irods
 ENTRYPOINT [ "/home/irods/icommand.sh" ]
