PoC: Add SSL settings patching provided setup_irods.py
This seems to work. `icat` and `ires` start. Running `izonereport` seems
to work as well.

This patch is not complete. Adding support for the provided json should
be done as well:

https://github.com/irods/irods/blob/master/scripts/irods/setup_options.py#L22

And perhaps maybe even *not* adding the SSL options to the manual prompt
as it might break other people's setup if we ever push upstrem. SSL
options would only be able to be set via the json.

[DHS-1044, DHS-1889]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -146,7 +146,7 @@ services:
     depends_on:
       - irods-db
       - mirthconnect
-    hostname: irods
+    hostname: irods.dh.local
     ports:
       - "1247:1247"
       - "1248:1248"
@@ -183,7 +183,7 @@ services:
     image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/ires:${ENV_TAG}
     depends_on:
       - irods
-    hostname: ires
+    hostname: ires.dh.local
     environment:
       RODS_PASSWORD: irods
       VIRTUAL_HOST: ires.${RIT_ENV}.rit.unimaas.nl
@@ -417,7 +417,7 @@ services:
     depends_on:
       - mirth-db
       - epicpid
-      - irods-frontend
+#      - irods-frontend
     hostname: mirthconnect
     ports:
       - "8443:8443"
