--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -416,7 +416,7 @@ services:
     depends_on:
       - mirth-db
       - epicpid
-#      - irods-frontend
+      - irods-frontend
     hostname: mirthconnect
     ports:
       - "8443:8443"
