--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -218,7 +218,7 @@ services:
     image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/ires-centos:${ENV_TAG}
     depends_on:
       - irods
-    hostname: ires-centos
+    hostname: ires-centos.dh.local
     environment:
       RODS_PASSWORD: irods
       VIRTUAL_HOST: ires-centos.${RIT_ENV}.rit.unimaas.nl
@@ -258,7 +258,7 @@ services:
       - irods
       - ires  # Because of ingest resource
       - minio1
-    hostname: ires-s3-1
+    hostname: ires-s3-1.dh.local
     environment:
       RODS_PASSWORD: irods
       VIRTUAL_HOST: ires-s3-1.${RIT_ENV}.rit.unimaas.nl
@@ -298,7 +298,7 @@ services:
       - irods
       - ires  # Because of ingest resource
       - minio2
-    hostname: ires-s3-2
+    hostname: ires-s3-1.dh.local
     environment:
       RODS_PASSWORD: irods
       VIRTUAL_HOST: ires-s3-2.${RIT_ENV}.rit.unimaas.nl
