--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -593,7 +593,11 @@ services:
         aliases:
           - open-access-worker.dh.local
   sram-sync:
-    build: externals/sram-sync/
+    build:
+      context: externals/sram-sync/
+      dockerfile: Dockerfile
+      args:
+        - SSL_ENV=${RIT_ENV}          # Whether to add our own CA-certificate to the CA-rootstore
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/sram-sync:${ENV_TAG}
     depends_on:
       - irods
@@ -618,6 +622,7 @@ services:
       DELETE_USERS: "True"
       SYNC_GROUPS: "True"
       DELETE_GROUPS: "True"
+      IRODS_CLIENT_SERVER_POLICY: CS_NEG_REQUIRE
     command: sram-sync.py --commit --scheduled
     networks:
       default:
