--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -565,6 +565,8 @@ services:
     build:
       context: ./externals/irods-open-access-repo
       dockerfile: ./docker/Dockerfile
+      args:
+        - SSL_ENV=${RIT_ENV}
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/open-access-worker:${ENV_TAG}
 #    depends_on:
 #      - irods
@@ -577,6 +579,7 @@ services:
       IRODS_HOST: irods.dh.local
       IRODS_USER: rods
       IRODS_PASS: irods
+      IRODS_CLIENT_SERVER_POLICY: CS_NEG_REQUIRE
       DATAVERSE_HOST: https://demo.dataverse.nl
       DH_MAILER_HOST: mailer.dh.local
       DH_MAILER_USERNAME: user
@@ -610,6 +613,7 @@ services:
       IRODS_HOST: irods.dh.local
       IRODS_USER: rods
       IRODS_PASS: irods
+      IRODS_CLIENT_SERVER_POLICY: CS_NEG_REQUIRE
       LDAP_USER: cn=admin,dc=datahubmaastricht,dc=nl
       LDAP_PASS: admin
       LDAP_HOST: ldap://ldap.dh.local
@@ -622,7 +626,6 @@ services:
       DELETE_USERS: "True"
       SYNC_GROUPS: "True"
       DELETE_GROUPS: "True"
-      IRODS_CLIENT_SERVER_POLICY: CS_NEG_REQUIRE
     command: sram-sync.py --commit --scheduled
     networks:
       default:
