Add environment variable for bioportal url in MDR and load the irods-secrets in MDR for the bioportal API key  [DHS-1952, DHS-1593]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     depends_on:
       - keycloak
       - mdr-db
+    env_file:
+      - irods.secrets.cfg # Using ONLY BIOPORTAL_API_KEY
     environment:
       VIRTUAL_HOST: mdr.${RIT_ENV}.dh.unimaas.nl
       VIRTUAL_PORT: 8000
@@ -39,6 +41,7 @@ services:
       MDR_ANSIBLE_VERSION_TAG: DEV
       CROSSREF_LOOKUP_HOST: http://crossref-lookup.dh.local
       OLS_URL: https://ols.acc.rit.unimaas.nl
+      BIOPORTAL_URL: https://data.bioontology.org
       WEBDAV_URL: webdav.${RIT_ENV}.rit.unimaas.nl
       TERMS_OF_SERVICE_TIMESTAMP: 1618476699 #  date '+%s' on	Thu Apr 15 2021 08:51:39 GMT+0000
       DATAVERSE_ENDPOINT: https://demo.dataverse.nl/
