--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,9 @@ services:
         aliases:
           - faker.dh.local
   keycloak:
-    image: jboss/keycloak:6.0.1
+    build:
+      context: keycloak
+      dockerfile: Dockerfile
     hostname: keycloak
     environment:
       VIRTUAL_HOST: keycloak.${RIT_ENV}.dh.unimaas.nl
