Added new env variables for epicpid, removed mirth env variables [DHS-1839, DHS-1977]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -172,6 +172,10 @@ services:
       IRODS_INGEST_REMOVE_DELAY: ${ENV_IRODS_INGEST_REMOVE_DELAY}
       MIRTH_VALIDATION_CHANNEL: ${ENV_MIRTH_VALIDATION_CHANNEL}
       MIRTH_METADATA_CHANNEL: ${ENV_MIRTH_METADATA_CHANNEL}
+      EPICPID_URL: ${ENV_EPICPID_URL}
+      EPICPID_USER: ${ENV_EPICPID_USER}
+      EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
+      MDR_HANDLE_URL: ${ENV_MDR_HANDLE_URL}
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
     networks:
       default:
@@ -205,6 +209,10 @@ services:
       IRODS_INGEST_REMOVE_DELAY: ${ENV_IRODS_INGEST_REMOVE_DELAY}
       MIRTH_VALIDATION_CHANNEL: ${ENV_MIRTH_VALIDATION_CHANNEL}
       MIRTH_METADATA_CHANNEL: ${ENV_MIRTH_METADATA_CHANNEL}
+      EPICPID_URL: ${ENV_EPICPID_URL}
+      EPICPID_USER: ${ENV_EPICPID_USER}
+      EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
+      MDR_HANDLE_URL: ${ENV_MDR_HANDLE_URL}
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
     networks:
       default:
@@ -241,6 +249,10 @@ services:
       IRODS_INGEST_REMOVE_DELAY: ${ENV_IRODS_INGEST_REMOVE_DELAY}
       MIRTH_VALIDATION_CHANNEL: ${ENV_MIRTH_VALIDATION_CHANNEL}
       MIRTH_METADATA_CHANNEL: ${ENV_MIRTH_METADATA_CHANNEL}
+      EPICPID_URL: ${ENV_EPICPID_URL}
+      EPICPID_USER: ${ENV_EPICPID_USER}
+      EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
+      MDR_HANDLE_URL: ${ENV_MDR_HANDLE_URL}
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
     networks:
       default:
@@ -281,6 +293,10 @@ services:
       IRODS_INGEST_REMOVE_DELAY: ${ENV_IRODS_INGEST_REMOVE_DELAY}
       MIRTH_VALIDATION_CHANNEL: ${ENV_MIRTH_VALIDATION_CHANNEL}
       MIRTH_METADATA_CHANNEL: ${ENV_MIRTH_METADATA_CHANNEL}
+      EPICPID_URL: ${ENV_EPICPID_URL}
+      EPICPID_USER: ${ENV_EPICPID_USER}
+      EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
+      MDR_HANDLE_URL: ${ENV_MDR_HANDLE_URL}
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY1}
       ENV_S3_SECRET_KEY: ${ENV_S3_SECRET_KEY1}
@@ -321,6 +337,10 @@ services:
       IRODS_INGEST_REMOVE_DELAY: ${ENV_IRODS_INGEST_REMOVE_DELAY}
       MIRTH_VALIDATION_CHANNEL: ${ENV_MIRTH_VALIDATION_CHANNEL}
       MIRTH_METADATA_CHANNEL: ${ENV_MIRTH_METADATA_CHANNEL}
+      EPICPID_URL: ${ENV_EPICPID_URL}
+      EPICPID_USER: ${ENV_EPICPID_USER}
+      EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
+      MDR_HANDLE_URL: ${ENV_MDR_HANDLE_URL}
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
       ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY2}
       ENV_S3_SECRET_KEY: ${ENV_S3_SECRET_KEY2}
