--- a/.env
+++ b/.env
@@ -55,3 +55,8 @@ ENV_S3_ACCESS_KEY1=ABCDEFGHIJKLMNOPQRST
 ENV_S3_SECRET_KEY1=ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNO
 ENV_S3_ACCESS_KEY2=BCDEFGHIJKLMNOPQRSTU
 ENV_S3_SECRET_KEY2=BCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOP
+
+ENV_EPICPID_URL=http://epicpid.dh.local/epic/21.T12996/
+ENV_EPICPID_USER=user
+ENV_EPICPID_PASSWORD=foobar
+ENV_MDR_HANDLE_URL=https://mdr.dev.dh.unimaas.nl/hdl/
