--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -524,7 +524,7 @@ services:
     build: externals/epicpid-microservice/docker
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/epicpid:${ENV_TAG}
     environment:
-      VIRTUAL_HOST: epicpid.${RIT_ENV}.rit.unimaas.nl
+      VIRTUAL_HOST: epicpid.${RIT_ENV}.dh.unimaas.nl
       LOGSTASH_TAGS: EPIC_PID
       LOG_LEVEL: DEBUG
       USERNAME: user
