Install python-tz on build [DHDO-243]

--- a/ires-centos/Dockerfile
+++ b/ires-centos/Dockerfile
@@ -26,6 +26,7 @@ RUN yum install -y \
     python-requests \
     python-jsonschema \
     python-ldap \
+    python-tz \
     lsof \
     fortune-mod \
     nano \
