--- a/ires-s3/Dockerfile
+++ b/ires-s3/Dockerfile
@@ -25,6 +25,7 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     python-requests \
     python-jsonschema \
     python-ldap \
+    python-tz \
     sudo \
     lsof \
     fortune-mod \
