--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -23,6 +23,7 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     python-requests \
     python-jsonschema \
     python-ldap \
+    python-tz \
     sudo \
     lsof \
     fortune-mod \
