--- a/.env
+++ b/.env
@@ -8,7 +8,8 @@ ENV_TAG=latest
 ENV_BRANCH=master
 
 # iRODS and iRES
-ENV_IRODS_VERSION=4.2.10
+ENV_IRODS_VERSION=4.2.11-1~bionic
+ENV_IRODS_PYTHON_PLUGIN_VERSION=4.2.11.1-1~bionic
 ENV_IRODS_EXT_CLANG_VERSION=6.0-0
 ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=6.0-0
 ENV_IRODS_RESC_PLUGIN_S3_VERSION=2.6.2
