--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -409,6 +409,7 @@ services:
       - ./externals/rit-metalnx-web/metalnx-configuration/metalnxConfig.xml:/etc/irods-ext/metalnxConfig.xml
       - ./externals/rit-metalnx-web/metalnx-configuration/metalnx.properties:/tmp/metalnx.properties
       - ./externals/rit-metalnx-web/log4j.properties:/tmp/log4j.properties
+      - ./externals/rit-metalnx-web/ServerInfo.properties:/usr/local/tomcat/lib/org/apache/catalina/util/ServerInfo.properties
       - ./externals/rit-metalnx-web/runit.sh:/runit.sh
       - ./icat/SSL/test_only_dev_irods_dh_ca_cert.pem:/tmp/cert/server.crt
     environment:
