--- a/irods/irods-base/Dockerfile.centos
+++ b/irods/irods-base/Dockerfile.centos
@@ -66,23 +66,26 @@ RUN rpm --import https://packages.irods.org/irods-signing-key.asc \
     # packages required for python rule engine
     irods-rule-engine-plugin-python-${IRODS_VERSION}
 
-# install Metalnx RMD
-# Installation of rpm tries to start the rmd service, which causes D-Bus errors to appear. These can be safely ignored
-# since we will start the rmd-service manually in bootstrap.sh
-ADD ./emc-metalnx-rmd-1.0-22.noarch.rpm /tmp/emc-metalnx-rmd-1.0-22.noarch.rpm
-RUN rpm -Uvh /tmp/emc-metalnx-rmd-1.0-22.noarch.rpm
-
 # Filebeat
 RUN wget https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${ENV_FILEBEAT_VERSION}-x86_64.rpm -O /tmp/filebeat.rpm \
  && rpm -Uvh /tmp/filebeat.rpm
 
-# Add scripts needed to finalize install
-RUN mkdir -p /opt/irods
-ADD extra_utils/ /opt/irods/
+# install Metalnx RMD
+# Installation of rpm tries to start the rmd service, which causes D-Bus errors to appear. These can be safely ignored
+# since we will start the rmd-service manually in bootstrap.sh
+ADD ./metalnx/emc-metalnx-rmd-1.0-22.noarch.rpm /opt/irods/emc-metalnx-rmd-1.0-22.noarch.rpm
+RUN rpm -Uvh /opt/irods/emc-metalnx-rmd-1.0-22.noarch.rpm
 
 # Add test/dev ONLY CA
 RUN mkdir -p /etc/irods/SSL/
 ADD ./test-dev-ssl-certs/* /etc/irods/SSL/
+
+# Add patched files / patches that derived images will probably all make use of
+ADD ./patch/* /opt/irods/patch/
+
+# Add scripts/utils needed to finalize install (not in this image)
+RUN mkdir -p /opt/irods
+ADD ./scripts/* /opt/irods/
 
 # TODO: Necessary?
 RUN chmod a+x /opt/irods/*
