Use exec form of CMD for ires, ires-s3 & ires-centos
Why?

To speed up `docker-compose down` or `docker-compose stop`.. If
dockerize gets the stop signal (SIGTERM), it will act accordingly and
stop the process. But if the shell[1] gets the signal (result of having CMD
in "shell form"), the signal will be ignored (also not forwarded to
dockerize). 10 seconds later docker will force stop the container.

See: https://github.com/jwilder/dockerize/issues/12
     https://docs.docker.com/engine/reference/builder/#cmd

Note that as centos has bash for /bin/sh, this is not necessary. But
it's converted anyway for consistency. See comment at the end of its
Dockerfile.

Also note that for iCAT, avoiding this 10 second timeout is done
differently, as it doesn't run dockerize. See comments in its
bootstrap.sh for more details (irods/icat/scripts/bootstrap.sh)

[1]: As long as the shell is 'dash' it seems, as it's the case for
     ubuntu images. Bash behaves differently (centos)

[DHDO-163]

--- a/irods/ires-centos/Dockerfile
+++ b/irods/ires-centos/Dockerfile
@@ -23,4 +23,13 @@ ADD ./test-dev-ssl-certs/* /etc/irods/SSL/
 ADD ./scripts/* /opt/irods/
 
 EXPOSE 1248 1247 8000
-CMD dockerize -wait tcp://irods.dh.local:1247 -timeout 200s /opt/irods/bootstrap.sh
+# Note: centos image uses 'bash' for /bin/sh. Ubuntu uses 'dash'.
+# When the CMD instruction is in shell form (without [" ",...]), docker will do
+# '/bin/sh -c "dockerize -wait ..."'. The behaviour in bash is different from
+# dash. My guess is, in bash if running as PID 1 (parent PID 0), it will behave
+# as an exec and just let that process take control (PID 1). In dash, this is
+# not the case and it will run as a child of shell (dash). This is incovenient
+# because signals sent to PID 1 (dash), are not forwarded to dockerize. Which
+# would make things like `docker-compose down` slow.
+# Nevertheless, we leave this CMD in exec form for consistency.
+CMD ["dockerize", "-wait", "tcp://irods.dh.local:1247", "-timeout", "200s", "/opt/irods/bootstrap.sh"]
