--- a/irods/ires/Dockerfile
+++ b/irods/ires/Dockerfile
@@ -30,4 +30,4 @@ ADD ./test-dev-ssl-certs/* /etc/irods/SSL/
 ADD ./scripts/* /opt/irods/
 
 EXPOSE 1248 1247 8000
-CMD dockerize -wait tcp://irods.dh.local:1247 -timeout 200s /opt/irods/bootstrap.sh
+CMD ["dockerize", "-wait", "tcp://irods.dh.local:1247", "-timeout", "200s", "/opt/irods/bootstrap.sh"]
