Make microservices build directory a shared volume
icat and ires's (ireses) all build the same mircroservices, by making
it a shared volume we save time, as icat will be the first to build
these microservices.

Building takes around 17 seconds on a regular laptop running native
docker.

Centos get it's own volume, just in case binaries compiled (rather,
linked?) under ubuntu images won't run under centos.

This change is more of a RFC/PoC at the moment.

[DHDO-163]

--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -28,11 +28,12 @@ services:
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
       - ./keycloak/users.json:/opt/irods/users.json
+      - microservices-build-ubuntu:/tmp/microservices-build
 
   ires-based:
     image: irods-ires:latest
     depends_on:
-      - irods-db
+      - icat-based
     hostname: ires.dh.local
     environment:
       RODS_PASSWORD: irods
@@ -56,6 +57,7 @@ services:
       - ./externals/irods-microservices:/microservices
       - ./externals/irods-helper-cmd:/helpers
       - ./staging-data:/mnt/ingest            # binding a non-existing dir results in creation of that dir on host system
+      - microservices-build-ubuntu:/tmp/microservices-build
     # Required for CIFS mounting. cap-add not enough in Windows for some reason.
     privileged: true
 
@@ -83,6 +85,7 @@ services:
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
       - ./externals/irods-helper-cmd:/helpers
+      - microservices-build-ubuntu:/tmp/microservices-build
     networks:
       default:
         aliases:
@@ -115,6 +118,7 @@ services:
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
       - ./externals/irods-helper-cmd:/helpers
+      - microservices-build-ubuntu:/tmp/microservices-build
     networks:
       default:
         aliases:
@@ -149,5 +153,14 @@ services:
       - ./externals/irods-microservices:/microservices
       - ./externals/irods-helper-cmd:/helpers
       - ./staging-data:/mnt/ingest            # binding a non-existing dir results in creation of that dir on host system
+      - microservices-build-centos:/tmp/microservices-build
     # Required for CIFS mounting. cap-add not enough in Windows for some reason.
     privileged: true
+
+volumes:
+  # these volumes exists so already-compiled microservices shared across
+  # icat/ires's don't have to be recompiled. If icat already compiled them, no
+  # need for ires's to recompilie.
+  microservices-build-ubuntu:
+  microservices-build-centos:
+
