--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,10 @@ services:
       OLS_URL: https://ols.acc.dh.unimaas.nl
       WEBDAV_URL: webdav.${RIT_ENV}.dh.unimaas.nl
       WEBDAV_UPLOAD_URL: upload.${RIT_ENV}.dh.unimaas.nl
+      SMB_UM_WINDOWS_PATH: \\foobar.unimaas.nl\iRODS-ingestzones\dev
+      SMB_UM_UNIX_PATH: foobar.unimaas.nl/iRODS-ingestzones/dev
+      SMB_MUMC_WINDOWS_PATH: \\foobar.prd.corp\dev
+      SMB_MUMC_UNIX_PATH: foobar.prd.corp/dev
       TERMS_OF_SERVICE_TIMESTAMP: 1618476699 #  date '+%s' on	Thu Apr 15 2021 08:51:39 GMT+0000
       DATAVERSE_ENDPOINT: https://demo.dataverse.nl/
       DATAVERSE_TREE_ROOT_ID: maastricht
