Add git as installable in iRODS packages [DHS-1846]

--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -36,7 +36,8 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1de.\2/" /etc/a
     g++ \
     make \
     cmake \
-    python-pip
+    python-pip \
+    git
     # }} end
 
 # Make sure to use the same postgres version for client and irods-db server
