Added fail2ban service in docker-compose [DHDO-424]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -416,6 +416,7 @@ services:
           - davrods.dh.local
     volumes:
       - /etc/localtime:/etc/localtime:ro
+      - webdav_logs:/var/log
   davrods-upload:
     build:
       context: externals/rit-davrods/
@@ -441,6 +442,7 @@ services:
           - davrods-upload.dh.local
     volumes:
       - /etc/localtime:/etc/localtime:ro
+      - upload_logs:/var/log
   metalnx:
     image: irods/metalnx:${ENV_METALNX_VERSION}
     hostname: metalnx
@@ -646,7 +648,19 @@ services:
       common_default:
         aliases:
           - mdr-db.dh.local
-
+  fail2ban:
+    image: crazymax/fail2ban:${ENV_FAIL2BAN_VERSION}
+    container_name: fail2ban
+    network_mode: "host"
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
+    volumes:
+      - webdav_logs:/var/log/webdav:ro
+      - upload_logs:/var/log/upload:ro
+      - "./externals/dh-fail2ban/data:/data"
+    env_file:
+      - "./externals/dh-fail2ban/fail2ban.env"
 
 networks:
   common_default:
@@ -654,3 +668,5 @@ networks:
 
 volumes:
   static_content:
+  webdav_logs:
+  upload_logs:
